fix for stuck overlay

--- a/src/components/MobileNav/scss/index.scss
+++ b/src/components/MobileNav/scss/index.scss
@@ -10,10 +10,6 @@
     //display: grid;
     min-height: $item-height;
 
-    &:last-child {
-      padding-bottom:50px;
-    }
-
     &-link,
     &-back span {
       // font-family: "Coda Caption", serif;
