--- a/src/components/Overlay/scss/index.scss
+++ b/src/components/Overlay/scss/index.scss
@@ -136,7 +136,7 @@ $close-width: ($button-size / 10);
     width: 495px;
     max-width: 100vw;
     min-height: 100%;
-    padding-bottom: 60px;
+    padding-bottom: 140px;
     background-color: $white;
     animation: sidenavLeftOpen 0.3s;
   }
